--- a/applicatie/css/style.css
+++ b/applicatie/css/style.css
@@ -205,4 +205,37 @@ textarea:focus {
 .login-section button {
     margin-bottom: 10px;
 }
+/* Voeg dit toe aan je bestaande CSS-bestand */
+
+.login-sections {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.login-section {
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 10px;
+    width: 45%;
+}
+
+.login-section form {
+    display: flex;
+    flex-direction: column;
+}
+
+.login-section label,
+.login-section input,
+.login-section button {
+    margin-bottom: 10px;
+}
+
+.error-msg {
+    color: red;
+}
+
+.success-msg {
+    color: green;
+}
 
